# cleanpplib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile
CleanppLibrary.xcodeproj/: project.pbxproj
CleanppLibrary.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cleanpp-gtest/: CMakeLists.txt  TestArrayQueueNaturalNumber.cpp  TestArrayStackNaturalNumber.cpp  TestBoundedNN.cpp  TestFlexInteger.cpp  TestFlexListNaturalNumber.cpp  TestFlexMapNaturalNumber.cpp  TestFlexNN.cpp  TestFlexQueueNaturalNumber.cpp  TestFlexSetNaturalNumber.cpp  TestFlexStackInt.cpp  TestLinkedQueueNaturalNumber.cpp  TestLinkedStackInt.cpp  TestLinkedStackNaturalNumber.cpp  TestNNInteger.cpp  TestStackBasedListNaturalNumber.cpp  TestStackNN.cpp  TestVectorInteger.cpp  hello_test.cpp  main.cpp
cleanpp-main/: add_subtract_return_tuple.cpp  clean_map.cpp  clean_set.cpp  friend_functions_tuple.cpp  main  main.cpp  makefile  minimal.cpp  practice.cpp  quicksort_clean.cpp  quicksort_flex.cpp  quicksort_reg.cpp  reverse_queue.cpp  reverse_queue2.cpp  reverse_queue_clean.cpp  reverse_queue_flex.cpp  reverse_queue_reg.cpp  reverse_queue_unique_ptr.cpp  reverse_stack.cpp  reverse_stack2.cpp  reverse_stack_clean.cpp  reverse_stack_flex.cpp  reverse_stack_reg.cpp  reverse_stack_unique_ptr.cpp  root_clean.cpp  root_flex.cpp  root_reg.cpp  root_template.cpp  selection_sort.cpp  selection_sort2.cpp  selection_sort3.cpp  selection_sort4.cpp  selection_sort5.cpp  selection_sort6.cpp  selection_sort_reg.cpp  selection_sort_tuple.cpp  war_clean.cpp  war_flex.cpp  war_reg.cpp
cleanpp-xctest/: TestArrayStackNaturalNumber.mm  TestCleanpp.xctestplan  TestFlexInteger.mm  TestFlexListNaturalNumber.mm  TestFlexibleSetNaturalNumber.mm  TestFlexibleStackInt.mm  TestLinkedStackNaturalNumber.mm  TestNNInteger.mm  TestVectorInteger.mm
examples/: makefile
examples/map_client/: clean_map.cpp
examples/quicksort/: quicksort_clean.cpp  quicksort_clean_copy.cpp  quicksort_reg.cpp
examples/reverse_queue/: reverse_queue_clean.cpp  reverse_queue_reg.cpp
examples/reverse_stack/: reverse_stack_clean.cpp  reverse_stack_reg.cpp
examples/root/: root_clean.cpp  root_reg.cpp
examples/selection_sort/: selection_sort_clean.cpp  selection_sort_reg.cpp
examples/set_client/: clean_set.cpp
examples/war/: war_clean.cpp  war_reg.cpp
experiments/: add_function.cpp  add_subtract_return_tuple.cpp  friend_functions_tuple.cpp  main.cpp  minimal.cpp  old_main.cpp  practice.cpp  queue.cpp  reverse_queue_flex_reg.cpp  root_unique_ptr.cpp  selection_sort.cpp  selection_sort2.cpp  selection_sort4.cpp  selection_sort5.cpp  selection_sort6.cpp  selection_sort_placeMinAtBack.cpp  set.cpp  stack.cpp  test.cpp
include/: Doxyfile_WILL
include/cleanpp/: BoundedNN.hpp  BoundedQueue.hpp  CleanBase.hpp  CleanList.hpp  CleanQueue.hpp  CleanStack.hpp  NaturalNumber.hpp  NaturalNumberKernel.hpp  abstract_template.hpp  bounded_nn.hpp  clean_base.hpp  clean_stack.hpp  integer.hpp  linked_stack.hpp  list.hpp  map.hpp  natural_number.hpp  natural_number_kernel.hpp  queue.hpp  set.hpp  stack.hpp  stack_nn.hpp
include/html/: _formulas.tex  annotated.html  array__queue_8hpp_source.html  array__stack_8hpp_source.html  bounded__nn_8hpp_source.html  classcleanpp_1_1array__queue-members.html  classcleanpp_1_1array__queue.html  classcleanpp_1_1array__stack-members.html  classcleanpp_1_1array__stack.html  classcleanpp_1_1bounded__nn-members.html  classcleanpp_1_1bounded__nn.html  classcleanpp_1_1clean__base-members.html  classcleanpp_1_1clean__base.html  classcleanpp_1_1flex__natural__number__kernel-members.html  classcleanpp_1_1flex__natural__number__kernel.html  classcleanpp_1_1integer-members.html  classcleanpp_1_1integer.html  classcleanpp_1_1integer__impl-members.html  classcleanpp_1_1integer__impl.html  classcleanpp_1_1integer__kernel-members.html  classcleanpp_1_1integer__kernel.html  classcleanpp_1_1integer__kernel__impl-members.html  classcleanpp_1_1integer__kernel__impl.html  classcleanpp_1_1linked__queue-members.html  classcleanpp_1_1linked__queue.html  classcleanpp_1_1linked__stack-members.html  classcleanpp_1_1linked__stack.html  classcleanpp_1_1list-members.html  classcleanpp_1_1list.html  classcleanpp_1_1list__impl-members.html  classcleanpp_1_1list__impl.html  classcleanpp_1_1list__kernel-members.html  classcleanpp_1_1list__kernel.html  classcleanpp_1_1list__kernel__impl-members.html  classcleanpp_1_1list__kernel__impl.html  classcleanpp_1_1map-members.html  classcleanpp_1_1map.html  classcleanpp_1_1map__impl-members.html  classcleanpp_1_1map__impl.html  classcleanpp_1_1map__on__set-members.html  (+76 more)
include/latex/: annotated.tex  classcleanpp_1_1array__queue.eps  classcleanpp_1_1array__queue.tex  classcleanpp_1_1array__stack.eps  classcleanpp_1_1array__stack.tex  classcleanpp_1_1bounded__nn.eps  classcleanpp_1_1bounded__nn.tex  classcleanpp_1_1clean__base.eps  classcleanpp_1_1clean__base.tex  classcleanpp_1_1flex__natural__number__kernel.eps  classcleanpp_1_1flex__natural__number__kernel.tex  classcleanpp_1_1integer.eps  classcleanpp_1_1integer.tex  classcleanpp_1_1integer__impl.eps  classcleanpp_1_1integer__impl.tex  classcleanpp_1_1integer__kernel.eps  classcleanpp_1_1integer__kernel.tex  classcleanpp_1_1integer__kernel__impl.eps  (+51 more)
src/: BoundedMovingStack.cpp  BoundedNN.cpp  BoundedQueue.cpp  LinkedQueue.cpp  LinkedStack.cpp  ListWithCursor.cpp  bounded_nn.cpp  linked_stack.cpp  main.cpp  stack_nn.cpp  stack_node.cpp
test/: TestArrayQueueNaturalNumber.mm  TestArrayStackNaturalNumber.mm  TestBoundedNN.mm  TestCleanpp.mm  TestCleanpp.xctestplan  TestFlexInteger.mm  TestFlexListNaturalNumber.mm  TestFlexNN.mm  TestFlexibleQueueNaturalNumber.mm  TestFlexibleStackInt.mm  TestLinkedQueueNaturalNumber.mm  TestLinkedStackINt.mm  TestLinkedStackInt.mm  TestLinkedStackNaturalNumber.mm  TestNNInteger.mm  TestStackBasedListNaturalNumber.mm  TestStackNN.mm  TestTemplateInteger.mm  TestTemplateListNaturalNumber.mm  TestTemplateNN.mm  TestTemplateQueueNaturalNumber.mm  TestTemplateStackInt.mm  TestVectorInteger.mm
(+142 files in other folders)
