cmake_minimum_required(VERSION 3.14)
project(cleanpp_gtest)

# GoogleTest requires at least C++11
set(CMAKE_CXX_STANDARD 14)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

link_directories(${CMAKE_SOURCE_DIR}/..)
include_directories(${CMAKE_SOURCE_DIR}/../include/cleanpp)

enable_testing()

add_executable(
  hello_test
  hello_test.cpp
)

add_executable(
  TestArrayQueueNaturalNumber
  TestArrayQueueNaturalNumber.cpp
)
add_executable(
  TestArrayStackNaturalNumber
  TestArrayStackNaturalNumber.cpp
)
add_executable(
  TestBoundedNN
  TestBoundedNN.cpp
)
add_executable(
  TestFlexQueueNaturalNumber
  TestFlexQueueNaturalNumber.cpp
)
add_executable(
  TestFlexSetNaturalNumber
  TestFlexSetNaturalNumber.cpp
)
add_executable(
  TestFlexStackInt
  TestFlexStackInt.cpp
)
add_executable(
  TestFlexInteger
  TestFlexInteger.cpp
)
add_executable(
  TestFlexListNaturalNumber
  TestFlexListNaturalNumber.cpp
)
add_executable(
  TestFlexNN
  TestFlexNN.cpp
)
add_executable(
  TestLinkedQueueNaturalNumber
  TestLinkedQueueNaturalNumber.cpp
)
add_executable(
  TestLinkedStackInt
  TestLinkedStackInt.cpp
)
add_executable(
  TestLinkedStackNaturalNumber
  TestLinkedStackNaturalNumber.cpp
)
add_executable(
  TestNNInteger
  TestNNInteger.cpp
)
add_executable(
  TestStackBasedListNaturalNumber
  TestStackBasedListNaturalNumber.cpp
)
add_executable(
  TestStackNN
  TestStackNN.cpp
)
add_executable(
  TestVectorInteger
  TestVectorInteger.cpp
)

target_link_libraries(
  hello_test
  gtest_main
)

target_link_libraries(
  TestArrayQueueNaturalNumber
  gtest_main
)
target_link_libraries(
  TestArrayStackNaturalNumber
  gtest_main
)
target_link_libraries(
  TestBoundedNN
  gtest_main
)
target_link_libraries(
  TestFlexQueueNaturalNumber
  gtest_main
)
target_link_libraries(
  TestFlexSetNaturalNumber
  gtest_main
)
target_link_libraries(
  TestFlexStackInt
  gtest_main
)
target_link_libraries(
  TestFlexInteger
  gtest_main
)
target_link_libraries(
  TestFlexListNaturalNumber
  gtest_main
)
target_link_libraries(
  TestFlexNN
  gtest_main
)
target_link_libraries(
  TestLinkedQueueNaturalNumber
  gtest_main
)
target_link_libraries(
  TestLinkedStackInt
  gtest_main
)
target_link_libraries(
  TestLinkedStackNaturalNumber
  gtest_main
)
target_link_libraries(
  TestNNInteger
  gtest_main
)
target_link_libraries(
  TestStackBasedListNaturalNumber
  gtest_main
)
target_link_libraries(
  TestStackNN
  gtest_main
)
target_link_libraries(
  TestVectorInteger
  gtest_main
)

target_link_libraries(
  hello_test
  Cleanpp
)

target_link_libraries(
  TestArrayQueueNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestArrayStackNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestBoundedNN
  Cleanpp
)
target_link_libraries(
  TestFlexQueueNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestFlexSetNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestFlexStackInt
  Cleanpp
)
target_link_libraries(
  TestFlexInteger
  Cleanpp
)
target_link_libraries(
  TestFlexListNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestFlexNN
  Cleanpp
)
target_link_libraries(
  TestLinkedQueueNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestLinkedStackInt
  Cleanpp
)
target_link_libraries(
  TestLinkedStackNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestNNInteger
  Cleanpp
)
target_link_libraries(
  TestStackBasedListNaturalNumber
  Cleanpp
)
target_link_libraries(
  TestStackNN
  Cleanpp
)
target_link_libraries(
  TestVectorInteger
  Cleanpp
)

include(GoogleTest)
gtest_discover_tests(
  hello_test
)
gtest_discover_tests(
  TestArrayQueueNaturalNumber
)
gtest_discover_tests(
  TestArrayStackNaturalNumber
)
gtest_discover_tests(
  TestBoundedNN
)
gtest_discover_tests(
  TestFlexQueueNaturalNumber
)
gtest_discover_tests(
  TestFlexSetNaturalNumber
)
gtest_discover_tests(
  TestFlexStackInt
)
gtest_discover_tests(
  TestFlexInteger
)
gtest_discover_tests(
  TestFlexListNaturalNumber
)
gtest_discover_tests(
  TestFlexNN
)
gtest_discover_tests(
  TestLinkedQueueNaturalNumber
)
gtest_discover_tests(
  TestLinkedStackInt
)
gtest_discover_tests(
  TestLinkedStackNaturalNumber
)
gtest_discover_tests(
  TestNNInteger
)
gtest_discover_tests(
  TestStackBasedListNaturalNumber
)
gtest_discover_tests(
  TestStackNN
)
gtest_discover_tests(
  TestVectorInteger
)
